# listing

./: LICENSE  index.html
.github/workflows/: deploy.yaml
app/: .gitignore  example.db  main.py  pyproject.toml
app/app/: main.py
app/app/database/: base.py  db.py  session.py
app/app/models/: lists.py  products.py  user_list.py  users.py
app/app/repositories/: users.py
app/app/routers/: auth.py  lists.py  products.py  sse.py
app/app/schemas/: products.py
vue-project/: .gitignore  .nvmrc  index.html  package-lock.json  package.json  vite.config.ts
vue-project/public/: robots.txt
vue-project/src/: App.vue  main.ts  product.ts  style.css
vue-project/src/IndexedDB/: db.ts
vue-project/src/components/: DocumentPdf.vue  MessagePopUp.vue
vue-project/src/i18n/: index.ts
vue-project/src/i18n/locales/: de.json  en.json  enUS.json  es.json  fr.json
